# SPL-for-C

./: .gitignore  CHANGELOG  Jenkinsfile  Makefile  Makefile.gnu  Makefile.mingw  Makefile.old  Makefile.osx  Makefile.srcs  Makefile.test  NOTICE  README.md
c/: .gitignore
c/doxy/: Doxyfile  run_doxy.bat
c/examples/: .gitignore  Breakout.c  BrickPyramid  BrickPyramid.c  CarSimulator  CarSimulator.c  CarSimulatorStructs  CarSimulatorStructs.c  DrawLines.c  DrawRectangles.c  DrawTarget  DrawTarget.c  FilterImage.c  FlipImage  FlipImage.c  GHelloWorld.c  Makefile  Makefile.gnu  Makefile.mingw  Makefile.osx  Makefile.srcs  PacMan.c  Run.c  SimpleBlurImage.c  SimpleBlurImageStructs.c  StopSign.c  TestBinPipe.c  TestInteractors.c  TestInterface.c  TestPixelArray.c  USFlag.c
c/include/: binarypipe.h  binpipe.h  bst.h  charset.h  cmdscan.h  cmpfn.h  cslib.h  exception.h  filelib.h  foreach.h  generic.h  gevents.h  gimage.h  map.h  (+29 more)
doc/: charset-h.html  charset.html  cmdscan-h.html  cmdscan.html  cmpfn-h.html  cmpfn.html  cppdoc.css  cslib-h.html  cslib.html  exception-h.html  exception.html  filelib-h.html  filelib.html  foreach-h.html  foreach.html  gevents-h.html  gevents.html  ginteractors-h.html  ginteractors.html  gmath-h.html  gmath.html  gobjects-h.html  gobjects.html  graph-h.html  graph.html  gtimer-h.html  gtimer.html  gtypes-h.html  gtypes.html  gwindow-h.html  gwindow.html  hashmap-h.html  hashmap.html  index.html  loadobj-h.html  loadobj.html  map-h.html  map.html  pqueue-h.html  pqueue.html  (+24 more)
ide/clion/linux/: CMakeLists.txt  HelloGraphics.c
java/: Makefile
(+92 files in other folders)
